# asmbattle

./: CHANGELOG.md  CHANGELOG_fr.md  LICENCE.txt  LICENCE_fr.txt  MANIFEST.in  README.md  README_fr.md  build_mac.sh  build_mo.sh  build_po.sh  main.py  makefile  pyproject.toml  setup.cfg  setup.py
ASM/: attack1.asm  attack2.asm  attack3.asm  fibo.asm  helloworld.asm  loremipsum.asm  print_number.asm
asmbattle/: __init__.py  aboutbox.py  assembler.py  cpu.py  files.py  memory.py  ui.py  ui_controller.py  ui_view.py
asmbattle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
locale/: aboutbox.pot  assembler.pot  cpu.pot  cpu.pot.old  locale_header.txt  memory.pot  ui_controller.pot  ui_controller.pot.old  ui_view.pot  ui_view.pot.old
locale/en_US/LC_MESSAGES/: aboutbox.mo  aboutbox.po  assembler.mo  assembler.po  cpu.mo  cpu.po  memory.mo  memory.po  ui_controller.mo  ui_controller.po  ui_controller.po.old  ui_controller.pot  ui_view.mo  ui_view.po  ui_view.po.old
locale/fr_CA/LC_MESSAGES/: aboutbox.mo  aboutbox.po  aboutbox.pot  assembler.mo  assembler.po  cpu.mo  cpu.po  memory.mo  memory.po  ui_controller.mo  ui_controller.po  ui_controller.pot  ui_view..po  ui_view.mo  ui_view.po  ui_view.pot
resources/: asmbattle.ui
resources/base image.pxd/: metadata.info
resources/base image.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
resources/base image.pxd/data/: 53192CA9-B454-4127-91FC-8C0A41A19136  56161CFF-DB7D-4DA6-8212-67070C1DCC41  96871C75-903A-41A8-9C9C-115E25A0A240
resources/base image.pxd/data/selection/: meta
(+1 files in other folders)
