# for syntax, see: https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# wheel build command : python setup-py2app.py bdist bdist_wheel
# help command : python setup-py2app.py --help bdist_wheel
# py2app build command : python setup-py2app.py py2app [--alias]

# [metadata]
# name = asmbattle
# version = 0.9
# description = simple assembler code battle in virtual machine
# long_description = file: README.md
# keywords = assembler, programing, game
# license = MIT License
# license_files = LICENSE.txt
# classifiers =
#     'Development Status :: 2 - Beta',
#         'Intended Audience :: End-User',
#         'License :: OSI Approved :: MIT License',
#         'Programming Language :: Python :: 3.9'
#
#
#
[options]
zip_safe = TRUE
include_package_data = True     # includes content of MANIFEST.in file
python_requires=>=3.9

# [options.entry_points]
# gui =
#     executable-name = asmbattle.main:main
#

[build_ext]
inplace=1